--- a/rongchao-video-admin-parents/rongchao-video-admin-api/src/main/resources/resource/db.properties
+++ b/rongchao-video-admin-parents/rongchao-video-admin-api/src/main/resources/resource/db.properties
@@ -1,6 +1,6 @@
 jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://localhost:3306/rongchao-video-dev?characterEncoding=utf-8
-jdbc.url=jdbc:mysql://localhost:3306/shortvideo?characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/rangchao-video?characterEncoding=utf-8
 jdbc.username=root
 #jdbc.password=root
 jdbc.password=root
