--- a/rongchao-video-admin-parents/rongchao-video-admin-api/pom.xml
+++ b/rongchao-video-admin-parents/rongchao-video-admin-api/pom.xml
@@ -23,7 +23,16 @@
 			<artifactId>rongchao-video-admin-service</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
 
 
 	</dependencies>
